Refact: InputService 리팩토링 - 생성 후 생성 결과를 response body에 담아 반환 - 결과 생성 시 input list가 비어 있으면 예외를 던짐 - 결과 생성 로직 최적화
Issue #94